tests/fixtures/diagnostics/compile-expected-semicolon.stderr
Error: expected ";".
  ╷
3 │   background: blue;
  │             ^
  ╵
  compile-expected-semicolon.scss 3:13  root stylesheet
